...
                    'Descubre el corazón de los Andes',
                    style: Theme.of(context).textTheme.bodyMedium,
                  ),
                ),
                const SizedBox(height: 48),
                Text(
                  _isLoginMode ? 'Iniciar Sesión' : 'Crear una cuenta',
                  style: Theme.of(context).textTheme.titleMedium,
                ),
                const SizedBox(height: 24),
                if (!_isLoginMode) ...[
                  TextFormField(
                    controller: _nombreController,
...
                    ),
                  ),
                  validator: Validators.validatePassword,
                ),
                const SizedBox(height: 24),
                CustomButton(
                  text: _isLoginMode ? 'INGRESAR' : 'REGISTRARME',
                  isLoading: authVm.isLoading,
                  onPressed: _submit,
                ),
                const SizedBox(height: 16),
                Center(
                  child: TextButton(
...
